--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,9 +11,15 @@
     "tailwind:init": "tailwindcss init -p"
   },
   "dependencies": {
+    "@react-google-maps/api": "^2.20.7",
+    "framer-motion": "^12.23.24",
+    "leaflet": "^1.9.4",
+    "razorpay": "^2.9.6",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
-    "react-router-dom": "^7.9.3"
+    "react-leaflet": "^5.0.0",
+    "react-router-dom": "^7.9.3",
+    "recharts": "^3.2.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.36.0",
