--- a/backend/auth-service/authservice/authservice/src/main/java/Dockerfile
+++ b/backend/auth-service/authservice/authservice/src/main/java/Dockerfile
@@ -1,4 +1,4 @@
-# ===== BUILD STAGE =====
+# ====== BUILD STAGE ======
 FROM maven:3.9.6-eclipse-temurin-17 AS build
 WORKDIR /app
 
@@ -7,8 +7,8 @@ COPY src ./src
 
 RUN mvn -q -e -DskipTests package
 
-# ===== RUN STAGE =====
-FROM eclipse-temurin:17-jre
+# ====== RUN STAGE ======
+FROM eclipse-temurin:17-jdk
 WORKDIR /app
 
 COPY --from=build /app/target/*.jar app.jar
