--- a/backend/auth-service/authservice/authservice/Dockerfile
+++ b/backend/auth-service/authservice/authservice/Dockerfile
@@ -13,6 +13,7 @@ WORKDIR /app
 
 COPY --from=build /app/target/*.jar app.jar
 
+ENV PORT=8081
 EXPOSE 8081
 
 ENTRYPOINT ["java", "-jar", "app.jar"]
