--- a/backend/auth-service/authservice/authservice/Jenkinsfile
+++ b/backend/auth-service/authservice/authservice/Jenkinsfile
@@ -1,46 +1,57 @@
 pipeline {
     agent any
 
-    tools {
-        maven "Maven-3.9"
-        jdk "JDK17"
-    }
-
     stages {
 
         stage('Checkout Code') {
             steps {
-                checkout scm
+                git branch: 'main',
+                    url: 'https://github.com/RamyaAgali/smarttrip-ai-travel-planner'
             }
         }
 
-        stage('Build & Test') {
+        stage('Build Docker Image') {
             steps {
-                sh 'mvn -f backend/auth-service/authservice/authservice/pom.xml clean install -DskipTests=false'
+                script {
+                    dir('backend/auth-service/authservice/authservice') {
+                        sh 'docker build -t auth-service-image:latest .'
+                    }
+                }
             }
         }
 
-        stage('Docker Build') {
+        stage('Stop Old Container') {
             steps {
-                sh '''
-                docker build -t auth-service-image:latest backend/auth-service/
-                '''
+                script {
+                    sh '''
+                    if [ $(docker ps -aq -f name=auth-service) ]; then
+                        docker rm -f auth-service || true
+                    fi
+                    '''
+                }
             }
         }
 
-        stage('Archive JAR') {
+        stage('Run New Container') {
             steps {
-                archiveArtifacts artifacts: 'backend/auth-service/authservice/authservice/target/*.jar', fingerprint: true
+                script {
+                    sh '''
+                    docker run -d \
+                        --name auth-service \
+                        -p 8081:8081 \
+                        auth-service-image:latest
+                    '''
+                }
             }
         }
     }
 
     post {
         success {
-            echo 'Auth Service CI Completed Successfully.'
+            echo 'Auth Service Deployed Successfully 🎉'
         }
         failure {
-            echo 'Auth Service CI Failed.'
+            echo 'Auth Service Deployment Failed ❌'
         }
     }
 }
