--- a/backend/trip-service/tripservice/tripservice/Dockerfile
+++ b/backend/trip-service/tripservice/tripservice/Dockerfile
@@ -13,6 +13,7 @@ WORKDIR /app
 
 COPY --from=build /app/target/*.jar app.jar
 
+ENV PORT=8084
 EXPOSE 8084
 
 ENTRYPOINT ["java", "-jar", "app.jar"]
