--- a/backend/auth-service/authservice/authservice/Jenkinsfile
+++ b/backend/auth-service/authservice/authservice/Jenkinsfile
@@ -2,7 +2,7 @@ pipeline {
     agent any
 
     environment {
-        SONAR_AUTH_TOKEN = credentials('sonar-token')
+        DOCKERHUB_CREDENTIALS = credentials('dockerhub-creds')
     }
 
     stages {
@@ -16,19 +16,10 @@ pipeline {
 
         stage('Run Tests') {
             steps {
-                bat 'mvn test'
-            }
-        }
-
-        stage('SonarQube Analysis') {
-            steps {
-                withSonarQubeEnv('local-sonar') {
-                    bat """
-                        mvn sonar:sonar ^
-                        -Dsonar.projectKey=auth-service ^
-                        -Dsonar.host.url=http://localhost:9000 ^
-                        -Dsonar.login=%SONAR_AUTH_TOKEN%
-                    """
+                script {
+                    dir('backend/auth-service/authservice/authservice') {
+                        bat 'mvn clean test'
+                    }
                 }
             }
         }
@@ -38,42 +29,54 @@ pipeline {
                 script {
                     dir('backend/auth-service/authservice/authservice') {
                         bat 'docker build -t auth-service-image:latest .'
+                        bat "docker tag auth-service-image:latest ramya6367/auth-service:latest"
                     }
                 }
+            }
+        }
+
+        stage('Push to DockerHub') {
+            steps {
+                bat """
+                echo %DOCKERHUB_CREDENTIALS_PSW% | docker login -u %DOCKERHUB_CREDENTIALS_USR% --password-stdin
+                docker push ramya6367/auth-service:latest
+                """
             }
         }
 
         stage('Stop Old Container') {
             steps {
                 script {
-                    bat """
-                        docker ps -a -q -f name=auth-service > cid.txt
-                        set CID=
-                        for /f "tokens=*" %%i in (cid.txt) do set CID=%%i
-                        if NOT "%CID%"=="" docker rm -f %CID%
-                    """
+                    bat '''
+                    docker ps -a -q -f name=auth-service > cid.txt
+                    set CID=
+                    for /f "tokens=*" %%i in (cid.txt) do set CID=%%i
+                    if NOT "%CID%"=="" docker rm -f %CID%
+                    '''
                 }
             }
         }
 
         stage('Run New Container') {
             steps {
-                bat """
+                script {
+                    bat '''
                     docker run -d ^
                         --name auth-service ^
                         -p 8081:8081 ^
-                        auth-service-image:latest
-                """
+                        ramya6367/auth-service:latest
+                    '''
+                }
             }
         }
     }
 
     post {
         success {
-            echo 'Auth Service Pipeline Success'
+            echo 'Auth Service CI/CD Successful'
         }
         failure {
-            echo 'Auth Service Pipeline Failed'
+            echo 'Auth Service CI/CD Failed'
         }
     }
 }
