--- a/backend/auth-service/authservice/authservice/Jenkinsfile
+++ b/backend/auth-service/authservice/authservice/Jenkinsfile
@@ -30,7 +30,7 @@ pipeline {
                             mvn sonar:sonar ^
                             -Dsonar.projectKey=auth-service ^
                             -Dsonar.host.url=http://localhost:9000 ^
-                            -Dsonar.login=%SONAR_AUTH_TOKEN%
+                            -Dsonar.token=%SONAR_AUTH_TOKEN%
                         """
                     }
                 }
