--- a/backend/auth-service/authservice/authservice/Jenkinsfile
+++ b/backend/auth-service/authservice/authservice/Jenkinsfile
@@ -1,6 +1,10 @@
 pipeline {
     agent any
 
+    parameters {
+        string(name: 'USER_EMAIL', defaultValue: 'user@gmail.com', description: 'Enter email for pipeline alerts')
+    }
+    
     environment {
         SONAR_AUTH_TOKEN = credentials('sonar-token')
     }
