--- a/backend/trip-service/tripservice/tripservice/Jenkinsfile
+++ b/backend/trip-service/tripservice/tripservice/Jenkinsfile
@@ -29,6 +29,12 @@ pipeline {
             }
         }
 
+        stage('Publish Coverage') {
+            steps {
+                jacoco(execPattern: '/jacoco.exec', classPattern: '/classes', sourcePattern: '/src/main/java')
+            }
+        }
+
         stage('SonarQube Analysis') {
             steps {
                 withSonarQubeEnv('local-sonar') {
