--- a/backend/trip-service/tripservice/tripservice/Jenkinsfile
+++ b/backend/trip-service/tripservice/tripservice/Jenkinsfile
@@ -31,7 +31,7 @@ pipeline {
 
         stage('Publish Coverage') {
             steps {
-                jacoco(execPattern: '/jacoco.exec', classPattern: '/classes', sourcePattern: '/src/main/java')
+                jacoco(execPattern: '**/jacoco.exec', classPattern: '**/classes', sourcePattern: '**/src/main/java')
             }
         }
 
