updated email section

--- a/backend/auth-service/authservice/authservice/src/main/resources/application.yml
+++ b/backend/auth-service/authservice/authservice/src/main/resources/application.yml
@@ -22,16 +22,13 @@ spring:
   application:
    name: authservice
   mail:
-    host: smtp.gmail.com
-    port: 587
+    host: ${SPRING_MAIL_HOST}
+    port: ${SPRING_MAIL_PORT}
     username: ${SMTP_USERNAME}
     password: ${SMTP_PASSWORD}
     properties:
-      mail:
-        smtp:
-          auth: true
-          starttls:
-            enable: true
+      mail.smtp.auth: true
+      mail.smtp.starttls.enable: true
 
 jwt:
   secret: ${JWT_SECRET}
